# rag-chatbot-intel-mac

./: .gitignore  .pre-commit-config.yaml  CLAUDE.local.md  CLAUDE.md  debt_management_plan.md  pyproject.toml  pytest.ini  run.sh
.claude/commands/: implement-feature.md
backend/: ai_generator.py  document_processor.py  health_endpoint.py  models.py  search_tools.py  vector_store.py
backend/monitoring/: __init__.py  quality_monitor.py
frontend/: index.html  script.js  style.css
tests/: conftest.py
tests/fixtures/: sample_course.txt
tests/unit/: test_ai_generator.py  test_app.py  test_document_processor.py  test_models.py  test_rag_system.py  test_search_tools.py  test_session_manager.py  test_vector_store.py
