[project]
name = "rag-chatbot-intel-mac"
version = "0.1.0"
description = "RAG chatbot system compatible with Intel Macs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "numpy<2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "requests-mock>=1.12.1",
]
